updates to the AXI4 BFM to allow it to run with Modelsim

--- a/ve/axi4_master_bfm/sim/scripts/Makefile
+++ b/ve/axi4_master_bfm/sim/scripts/Makefile
@@ -2,6 +2,9 @@
 #* Makefile for axi4_master_bfm
 #****************************************************************************
 SCRIPTS_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
+AXI4_BFMS := $(abspath $(SCRIPTS_DIR)/../../../..)
+export AXI4_BFMS
+
 include $(PACKAGES_DIR)/packages.mk
 include $(PACKAGES_DIR)/simscripts/mkfiles/plusargs.mk
 
